--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -30,7 +30,7 @@ phases:
 
   build:
     commands:
-      - terraform $TF_COMMAND -auto-approve
+      - terraform plan
 
   post_build:
     commands:
